Auto Perspective does not work the same in all quad view panels #39397

Closed
opened 2014-03-24 20:17:37 +01:00 by Philip Sibbering · 24 comments

System Information
Windows 7 ultimate, Quadro 4000, Xeon

Blender Version
Broken: 2.70 Date: 2014-03-19 05:02 Hash 19e627c
Worked: All previous

Short description of error
Auto Perspective does not work in all quad view panels: camera penal goes to ortho not perspective when rotating view

Exact steps for others to reproduce the error
Using standard 'Maya' presets.

Set 'auto perspective' under 'Interface' in user preferences.

Space bar to a standard quad view with a camera. Hover over the camera perspective panel and rotate view (camera not locked to view). It will switch to ortho not perspective. Same if you space bar to make it a full panel.

Seems to affect all files, so no need to upload one.

**System Information** Windows 7 ultimate, Quadro 4000, Xeon **Blender Version** Broken: 2.70 Date: 2014-03-19 05:02 Hash 19e627c Worked: All previous **Short description of error** Auto Perspective does not work in all quad view panels: camera penal goes to ortho not perspective when rotating view **Exact steps for others to reproduce the error** Using standard 'Maya' presets. Set 'auto perspective' under 'Interface' in user preferences. Space bar to a standard quad view with a camera. Hover over the camera perspective panel and rotate view (camera not locked to view). It will switch to ortho not perspective. Same if you space bar to make it a full panel. Seems to affect all files, so no need to upload one.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Philip_S

Added subscriber: @Philip_S

#39225 was marked as duplicate of this issue

#39225 was marked as duplicate of this issue

Added subscriber: @mont29

Added subscriber: @mont29

Can't reproduce it here (granted, can't use much Maya preset on Linux french keyboard).

Do you have the same issue with default Blender preset?

Can't reproduce it here (granted, can't use much Maya preset on Linux french keyboard). Do you have the same issue with default Blender preset?

Yep the same issue using the Blender preset. Ctrl Alt Q to go to quad view, and as so an I middle mouse click 'camera perspective' to rotate the view it goes to ortho rather than perspective.

Yep the same issue using the Blender preset. Ctrl Alt Q to go to quad view, and as so an I middle mouse click 'camera perspective' to rotate the view it goes to ortho rather than perspective.

Added subscriber: @ideasman42

Added subscriber: @ideasman42

In future please try to narrow down the problem a bit, this is unrelated to maya settings AND auto-perspective from the looks of it

In future please try to narrow down the problem a bit, this is unrelated to maya settings AND auto-perspective from the looks of it

This issue was referenced by blender/blender-addons-contrib@bd57ec686c

This issue was referenced by blender/blender-addons-contrib@bd57ec686c7ec00a9a01e30f32bbcfd3c21a41fb

This issue was referenced by bd57ec686c

This issue was referenced by bd57ec686c7ec00a9a01e30f32bbcfd3c21a41fb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit bd57ec686c.

Closed by commit bd57ec686c.

How's this not related to auto-perspective? That's the thing not working???

How's this not related to auto-perspective? That's the thing not working???

@Philip_S - when orbiting out of camera view, the last perspective setting is used (ortho or persp).

Autopersp only sets perspective views when orbiting out of an axis view.

@Philip_S - when orbiting out of camera view, the last perspective setting is used (ortho or persp). Autopersp only sets perspective views when orbiting out of an axis view.

@ campbellbarton - Not on mine is doesn't. It always goes to ortho, no matter how many times I change it to perspective. It does not remember anything!

@ campbellbarton - Not on mine is doesn't. It always goes to ortho, no matter how many times I change it to perspective. It does not remember anything!

I've now checked it on my other machine with an older version of Blender (2.69), and the auto-perspective affects the camera perspective view as it should. If I turn it off it acts like the new version and goes to ortho, and again, it does not remember me setting it to perspective view.

You are incorrect.

It is a bug.

Please fix it.

I've now checked it on my other machine with an older version of Blender (2.69), and the auto-perspective affects the camera perspective view as it should. If I turn it off it acts like the new version and goes to ortho, and again, it does not remember me setting it to perspective view. You are incorrect. It is a bug. Please fix it.

@Philip_S in that case can you give exact steps to redo the bug, in a recent blender build.

From my own tests, it only goes back into ortho mode - if you were in ortho mode to begin with (when starting quad view)

@Philip_S in that case can you give exact steps to redo the bug, in a recent blender build. From my own tests, it only goes back into ortho mode - if you were in ortho mode to begin with (when starting quad view)

Not sure its related but was checking on this bug and found a problem with background grid drawing.
fixed 3ec0c73211

Not sure its related but was checking on this bug and found a problem with background grid drawing. fixed 3ec0c73211

@ campbellbarton - I want it to go into perspective view, and it doesn't. It always goes to ortho.

It's the same for any file.

In 2.69
Open file (with a camera)
Set auto-perspective to on
Got to quad view (so the camera perspective is in the top right and has the black board around it)
Hover over the camera perspective view port, hold alt and left click to drag (orbit).
The view switches to the standard (not camera) perspective.
Even if I change to ortho, and come out of quad view, and then back again, as soon as I orbit it goes to perspective
Perfect!

Now turn auto-perspective off
Basically the same things as above except when I hold alt and left click to drap it goes to ortho - exactly as I expected.
If I jump out of quad view and into the camera perspective view, hold alt and left click drag it goes to ortho - still as expected.
Now if I change it to perspective view and jump back to quad view...
And I hover over the camera perspective and hold alt and left click to drag it switches to ortho - again as expected.
Perfect!

In 2.70
Do the same as above, but whether auto-perspective is on or off, it always goes to ortho as soon as I hold alt and left click drag - not as expected!

I want it to be like 2.69!

Now every time I jump out of quad view and into camera respective and orbit I have to hit ctrl 7.

it's a bug and it bugs me!

@ campbellbarton - I want it to go into perspective view, and it doesn't. It *always* goes to ortho. It's the same for any file. In 2.69 Open file (with a camera) Set auto-perspective to on Got to quad view (so the camera perspective is in the top right and has the black board around it) Hover over the camera perspective view port, hold alt and left click to drag (orbit). The view switches to the standard (not camera) perspective. Even if I change to ortho, and come out of quad view, and then back again, as soon as I orbit it goes to perspective Perfect! Now turn auto-perspective off Basically the same things as above except when I hold alt and left click to drap it goes to ortho - exactly as I expected. If I jump out of quad view and into the camera perspective view, hold alt and left click drag it goes to ortho - still as expected. Now if I change it to perspective view and jump back to quad view... And I hover over the camera perspective and hold alt and left click to drag it switches to ortho - again as expected. Perfect! In 2.70 Do the same as above, but whether auto-perspective is on or off, it *always* goes to ortho as soon as I hold alt and left click drag - not as expected! I want it to be like 2.69! Now every time I jump out of quad view and into camera respective and orbit I have to hit ctrl 7. it's a bug and it bugs me!

Added subscriber: @rickyblender

Added subscriber: @rickyblender

◀ Merged tasks: #39225.

◀ Merged tasks: #39225.

@ideasman42: just merged a previous report that looks very similar to this one… Could it be related to e.g. some 2.69 startup file messing in 2.70 version somehow? Do you think we should reopen this report?

@reporters: our issue is that we cannot reproduce this behavior here…

@ideasman42: just merged a previous report that looks very similar to this one… Could it be related to e.g. some 2.69 startup file messing in 2.70 version somehow? Do you think we should reopen this report? @reporters: our issue is that we cannot reproduce this behavior here…

@ mont29 - Does that happen? If it's any help: I upgraded from 2.69 and my start up file is not the default.

I'm using a work around of hitting F while hovering over the camera perspective window in quad view as that takes me into regular perspective mode.

@ mont29 - Does that happen? If it's any help: I upgraded from 2.69 and my start up file is not the default. I'm using a work around of hitting F while hovering over the camera perspective window in quad view as that takes me into regular perspective mode.

@Philip_S

Did you check a recent build? Checked your report again and this was almost certainly fixed bd57ec686c

I can redo your bug in 2.70 but not current master.

@Philip_S Did you check a recent build? Checked your report again and this was almost certainly fixed bd57ec686c I can redo your bug in 2.70 but not current master.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39397
No description provided.