Fix T39397: Leaving leaving camera from quadview set ortho